# mikoshi

./: AGENTS.md  README.md  pyproject.toml
mikoshi/: git.py  plugins.py  server.py  storage.py  workspace.py
mikoshi/agents/: __init__.py  base.py  manager.py  plugin_base.py  react.py  research.py  structured.py  workspace.py
mikoshi/agents/context/: messages.py  naming.py  skills.py
mikoshi/agents/research/: __init__.py  agent.py  helpers.py  prompts.py  stages.py
mikoshi/connectors/: __init__.py  forgejo.py  github.py  registry.py
mikoshi/db/: db.py  migrations.py  models.py
mikoshi/providers/: clients.py
mikoshi/routes/: chats.py  config.py  connectors.py  files.py  tools.py  upload_utils.py  workspaces.py
mikoshi/tools/: edit_utils.py  manager.py  toolset_handler.py  workspace.py
tests/: __init__.py  conftest.py  test_agent_manager.py  test_api_chats.py  test_api_workspaces.py  test_config.py  test_context_messages.py  test_context_skills.py  test_db.py  test_edit_utils.py  test_provider.py  test_research_synthesis.py  test_structured_agent.py  test_toolset_handler.py  test_workspace.py
webui/: package-lock.json  package.json  vite.config.ts
webui/src/: index.css
webui/src/components/: chat-header.tsx  chat-input.tsx  chat-message.tsx  chat-settings-dialog.tsx  chat-view.tsx  create-node-dialog.tsx  data-tab.tsx  file-attachments.tsx  file-editor.tsx  file-panel.tsx  file-preview.tsx  mention-dropdown.tsx  messages-list.tsx  nodes-tab.tsx  sessions-tab.tsx  sidebar-item.tsx  sidebar-segmented.tsx  sidebar.tsx  (+2 more)
webui/test/: setup.ts
(+30 files in other folders)
