[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "isort>=7.0.0",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "mcp>=1.25.0",
    "openai>=2.14.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mikoshi"]

[tool.hatch.build.targets.wheel.force-include]
"webui/dist" = "mikoshi/static"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
